tests/machine/x/kt/len_string.error
Error on line 0: kotlinc error: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kt/len_string.kt:2:18: error: unresolved reference: size
	println("mochi".size)
                 ^

1: fun main() {
