tests/machine/x/kt/len_string.kt
fun main() {
	println("mochi".size)
}
